--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql= true
 
 spring.thymeleaf.cache=false
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select username, password ,enabled  from user where username=?
+spring.datasource.validationQuery = SELECT 1
