login logout by Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,17 @@ spring.datasource.password = idlraiwt
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+# "update" will automatically create/update the tables in the database
+# according to the entities in our application.
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.show-sql= true
 
 spring.thymeleaf.cache=false
 
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select username, password, active from user where username=?
+spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
 
