other class file changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
+server.port=8000
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url = jdbc:mysql://localhost:3306/users?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = idlraiwt
 
+#spring.test.database.url = jdbc:mysql://localhost:3306/users?useSSL=false
+#spring.test.database.replace=none
 
+logging.level.org.springframework.data=DEBUG
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -21,4 +26,14 @@ spring.thymeleaf.cache=false
 # ==============================================================
 spring.queries.users-query=select username, password, active from user where username=?
 spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.username=?
+
+
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:~/retroboard
+#spring.datasource.username=sa
+#spring.datasource.password=
 
